--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       /*box-shadow: inset 0 2px 2px 2px #eee;*/
       background: transparent;
       text-indent: 10px;
-      color: #fff;
+      color: #999;
     }
     .register input:nth-of-type(2) {
       margin: 26px 0 30px;
@@ -237,6 +237,16 @@
 
     dataUsers = JSON.parse(localStorage.getItem('dataUsers')) || dataUsers;
     let dataNow = JSON.parse(localStorage.getItem('dataNow')) || {};
+    let dataNowOriginSync = {};
+    //如果已登录,取登录用户数据
+    if (dataNow.isLogin) {
+      for (let e of dataUsers) {
+        if (e.email === dataNow.email) {
+          dataNowOriginSync = e;
+          break;
+        }
+      }
+    }
 
     const section = document.querySelector('section');
     const listsGoods = section.querySelector('ul');
@@ -247,6 +257,14 @@
     const login = document.querySelector('.login');
     const registerSure = document.querySelector('.register .register-sure');
     const loginSure = document.querySelector('.login .login-sure');
+
+    //页面载入时,确认购物袋提示,账户登录以否提示
+    (() => {
+      isCart(dataNow.carts);
+      if (dataNow.isLogin) {
+        account.innerText = '退出';
+      }
+    })();
 
     //登录后方可查看购物袋,订单
     (() => {
@@ -266,13 +284,6 @@
           location.href = 'html/order.html';
         }
       });
-    })();
-
-    (() => {
-      isCart(dataNow.carts);
-      if (dataNow.isLogin) {
-        account.innerText = '退出';
-      }
     })();
 
     (() => {
@@ -318,8 +329,12 @@
               account.innerText = '退出';
               e.isLogin = true;
               dataNow = e;
+              //取登录用户数据
+              dataNowOriginSync = e;
               isCart(dataNow.carts);
               localStorage.setItem('dataNow', JSON.stringify(dataNow));
+              //避免dataNow指向原始数据
+              dataNow = JSON.parse(localStorage.getItem('dataNow'));
               localStorage.setItem('dataUsers', JSON.stringify(dataUsers));
               break;
             }
@@ -334,6 +349,8 @@
         } else {
           account.innerText = '登录';
           dataNow.isLogin = false;
+          //同步更改原数据
+          dataNowOriginSync.isLogin = false;
           dataNow = {};
           isCart(dataNow.carts);
           localStorage.removeItem('dataNow');
@@ -379,7 +396,7 @@
     function goodEvents() {
       const cartAdds = listsGoods.querySelectorAll('.cartAdd');
       cartAdds.forEach(e => {
-
+        //登录后方可添加购物袋
         e.addEventListener('click', function (ev) {
           ev.preventDefault();
           if (!dataNow.isLogin) {
@@ -388,6 +405,8 @@
         });
 
         e.addEventListener('click', function () {
+          //每次须重新获取dataNow
+          dataNow = JSON.parse(localStorage.getItem('dataNow')) || {};
           const goodsId = +e.parentNode.firstElementChild.innerText;
           const path = `../`;
           let sData = [];
@@ -397,16 +416,22 @@
               sData = JSON.parse(JSON.stringify(e));
             }
           });
-          dataNow.carts.forEach(e => {
+          //如果已有同种商品
+          dataNow.carts.forEach((e, i) => {
             if (e.goodsId === sData.goodsId) {
               e.num++;
+              //同步更改原数据
+              dataNowOriginSync.carts[i].num++;
               isInclude = true;
             }
           });
+          //如果没有同种商品
           if (!isInclude) {
             sData.num = 1;
             sData.pic_min = path + sData.pic_min;
             dataNow.carts.unshift(sData);
+            //同步更改原数据
+            dataNowOriginSync.carts.unshift(sData);
           }
           isCart(dataNow.carts);
           localStorage.setItem('dataNow', JSON.stringify(dataNow));
