--- a/novatex/html/cart.html
+++ b/novatex/html/cart.html
@@ -314,7 +314,7 @@
       let formDate = [];
       const time = new Date();
       formDate.push(time.getFullYear());
-      formDate.push(time.getMonth());
+      formDate.push(time.getMonth() + 1);
       formDate.push(time.getDate());
       formDate.push(time.getHours());
       formDate.push(time.getMinutes());
