--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <ul id="container">
     <li><a href="box-dispeal/index.html">box-dispeal</a></li>
     <li><a href="novatex/index.html">novatex</a></li>
+    <li><a href="novatex-react/build/index.html">novatex-react</a></li>
   </ul>
 </body>
 </html>
